manifests/backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    name: backend
    kubernetes.io/metadata.name: backend
    app.kubernetes.io/part-of: cloud-retail
