manifests/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api
  namespace: backend
  labels:
    app: backend-api
    tier: api
    app.kubernetes.io/name: backend-api
    app.kubernetes.io/part-of: cloud-retail
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: backend-api
